# opensocial

./: .gitignore  README.md  configure  makefile  pyproject.toml  requirements.txt
schemas/account/: 001-add-accounts-table.down.sql  001-add-accounts-table.sql
schemas/post/: 001-add-posts-table.down.sql  001-add-posts-table.sql
src/opensocial/: cli.py
src/opensocial/db/: __main__.py  utils.py
src/opensocial/integrations/: __init__.py  charsocial.py
src/opensocial/server/: __init__.py  api.py  server.py
src/opensocial/utils/: config.py
src/opensocial/ws/: __init__.py
